<resources>
    <string name="app_name">FootyApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="_02">0</string>
    <string name="away">Away</string>
    <string name="draws">Draws:</string>
    <string name="favourite">Favourite</string>
    <string name="points">Points:</string>
    <string name="goal_difference">Goal Difference:</string>
    <string name="played_games">Played Games:</string>
    <string name="goals">Goals:</string>
    <string name="goals_against">Goals Against:</string>
    <string name="losses">Losses:</string>
    <string name="wins">Wins:</string>
</resources>
